<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <com.google.android.material.appbar.AppBarLayout
        android:id="@+id/appbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fitsSystemWindows="true"
        app:layout_constraintTop_toTopOf="parent">

        <com.google.android.material.appbar.MaterialToolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            app:title="@string/app_name" />

    </com.google.android.material.appbar.AppBarLayout>

    <LinearLayout
        android:id="@+id/show_view_root"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:clipChildren="false"
        android:clipToPadding="false"
        android:divider="@drawable/layout_divider"
        android:orientation="vertical"
        android:showDividers="middle"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/appbar">


        <com.google.android.material.materialswitch.MaterialSwitch
            android:id="@+id/designer_ui_visibility_is_show_appbar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="16dp"
            android:layout_marginVertical="8dp"
            android:checked="false"
            android:text="@string/designer_ui_visibility_is_show_appbar"
            android:textAppearance="?attr/textAppearanceBodyLarge" />

        <com.google.android.material.materialswitch.MaterialSwitch
            android:id="@+id/designer_ui_visibility_is_show_system_ui"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="16dp"
            android:layout_marginVertical="8dp"
            android:checked="true"
            android:text="@string/designer_ui_visibility_is_show_system_ui"
            android:textAppearance="?attr/textAppearanceBodyLarge" />

        <com.google.android.material.textfield.TextInputLayout
            style="?attr/textInputOutlinedExposedDropdownMenuStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="16dp"
            android:hint="@string/designer_ui_mode_display_hint">

            <com.google.android.material.textfield.MaterialAutoCompleteTextView
                android:id="@+id/designer_ui_mode_display"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/designer_ui_mode_display_hint"
                android:inputType="none"
                android:maxLines="1"
                android:singleLine="true"
                android:text="@string/designer_ui_mode_display_design"
                app:simpleItems="@array/designer_ui_mode_all" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.materialswitch.MaterialSwitch
            android:id="@+id/designer_ui_mode_read_only"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="16dp"
            android:layout_marginVertical="8dp"
            android:checked="false"
            android:text="@string/designer_ui_mode_read_only"
            android:textAppearance="?attr/textAppearanceBodyLarge" />

        <com.google.android.material.textfield.TextInputLayout
            style="?attr/textInputOutlinedExposedDropdownMenuStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="16dp"
            android:hint="@string/designer_ui_system_theme">

            <com.google.android.material.textfield.MaterialAutoCompleteTextView
                android:id="@+id/designer_ui_system_theme"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/designer_ui_system_theme"
                android:inputType="none"
                android:maxLines="1"
                android:singleLine="true"
                android:text="\@android:style/Theme.Material"
                tools:ignore="HardcodedText" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            style="?attr/textInputOutlinedExposedDropdownMenuStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="16dp"
            android:hint="@string/designer_ui_app_theme">

            <com.google.android.material.textfield.MaterialAutoCompleteTextView
                android:id="@+id/designer_ui_app_theme"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/designer_ui_app_theme"
                android:inputType="none"
                android:maxLines="1"
                android:singleLine="true"
                android:text="None"
                tools:ignore="HardcodedText" />
        </com.google.android.material.textfield.TextInputLayout>

    </LinearLayout>


</androidx.constraintlayout.widget.ConstraintLayout>